# compatmalloc

./: .dockerignore  .gitignore  CHANGELOG.md  Cargo.toml  Dockerfile  Dockerfile.alpine  LICENSE-APACHE  LICENSE-MIT  README.md  SECURITY.md
.cargo/: config.toml
.github/workflows/: bench.yml  ci.yml  docs.yml  fuzz.yml  preload-validation.yml  publish.yml
benches/scripts/: run_app_benchmarks.sh  run_comparison.sh  update_readme_benchmarks.sh
benches/src/: cfrac.rs  larson.rs  micro.rs
crates/compatmalloc/: Cargo.toml  build.rs
crates/compatmalloc/csrc/: tls_fast.c
crates/compatmalloc/linker/: exports.def  version_script.lds  version_script_musl.lds
crates/compatmalloc/src/: api.rs  config.rs  global_alloc.rs  init.rs  lib.rs  sync.rs  util.rs
crates/compatmalloc/src/allocator/: hardened.rs  mod.rs  passthrough.rs  thread_cache.rs
crates/compatmalloc/src/hardening/: canary.rs  fork.rs  guard_pages.rs  integrity.rs  metadata.rs  mod.rs  poison.rs  quarantine.rs  self_check.rs
crates/compatmalloc/src/large/: guard.rs  mod.rs
crates/compatmalloc/src/platform/: linux.rs  macos.rs  mod.rs  mte.rs  windows.rs
crates/compatmalloc/src/slab/: arena.rs  bitmap.rs  mod.rs  page_map.rs  size_class.rs
crates/compatmalloc/tests/: abi_basic.rs  global_allocator.rs  hardening_detection.rs  threading_stress.rs
docs/: book.toml
docs/plans/: 2026-02-16-beat-glibc-design.md  2026-02-19-readme-dockerfile-pkgbuild-global-allocator.md
docs/src/: SUMMARY.md  abi-contract.md  benchmarks.md  building.md  configuration.md  deviations.md  failure-modes.md  getting-started.md  introduction.md
docs/src/cve-case-studies/: cve-2023-6246.md  cve-2024-2961.md  double-free.md  overview.md
docs/src/hardening/: guard-pages.md  heap-metadata.md  mte.md  overview.md  stale-pointers.md  use-after-free.md
fuzz/: Cargo.toml
fuzz/fuzz_targets/: fuzz_ops.rs  fuzz_sizes.rs
pkg/arch/: PKGBUILD
tests/cve/: double_free.c  heap_overflow.c  run_demos.sh  tcache_poison.c
tests/differential/: trace_replay.rs
tests/integration/: test_preload.sh
tests/signal_safety/: signal_test.rs
