[workspace]
members = ["crates/compatmalloc"]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
repository = "https://github.com/t-cun/compatmalloc"

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
panic = "abort"

[profile.hardened]
inherits = "release"
opt-level = 2
overflow-checks = true
debug = 1
