[package]
name = "compatmalloc"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
description = "A memory-hardening drop-in allocator with standard C ABI"
readme = "../../README.md"
keywords = ["allocator", "malloc", "hardening", "security", "memory-safety"]
categories = ["memory-management", "os"]

[lib]
crate-type = ["cdylib", "lib"]

[features]
default = ["hardened"]
hardened = [
    "quarantine",
    "guard-pages",
    "slot-randomization",
    "canaries",
    "poison-on-free",
    "write-after-free-check",
    "zero-on-free",
]
quarantine = []
guard-pages = []
slot-randomization = []
canaries = []
poison-on-free = []
write-after-free-check = []
zero-on-free = []
mte = []
global-allocator = ["hardened"]

[dependencies]
libc = "0.2"

[build-dependencies]
cc = "1"

[dev-dependencies]
rand = "0.8"
